@@ -12,12 +12,18 @@ package org.weasis.dicom.rt;
 import static org.opencv.core.Core.addWeighted;
 import static org.opencv.core.Core.minMaxLoc;
 import static org.opencv.core.Core.multiply;
+import static org.weasis.dicom.codec.geometry.GeometryOfSlice.MIN_SPACING;
 
-import java.awt.*;
-import java.awt.geom.Point2D;
-import java.util.*;
+import java.awt.Color;
+import java.util.ArrayList;
+import java.util.HashMap;
+import java.util.LinkedHashMap;
+import java.util.LinkedHashSet;
 import java.util.List;
-import java.util.stream.DoubleStream;
+import java.util.ListIterator;
+import java.util.Map;
+import java.util.NavigableMap;
+import java.util.Set;
 import org.dcm4che3.data.Attributes;
 import org.dcm4che3.data.Sequence;
 import org.dcm4che3.data.Tag;
@@ -28,16 +34,20 @@ import org.opencv.core.Mat;
 import org.opencv.core.MatOfFloat;
 import org.opencv.core.MatOfInt;
 import org.opencv.core.Scalar;
+import org.opencv.core.Size;
 import org.opencv.imgproc.Imgproc;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.weasis.core.api.media.data.MediaElement;
-import org.weasis.core.ui.model.graphic.imp.seg.SegContour;
-import org.weasis.dicom.codec.*;
+import org.weasis.dicom.codec.DicomImageElement;
+import org.weasis.dicom.codec.DicomMediaIO;
+import org.weasis.dicom.codec.DicomSeries;
+import org.weasis.dicom.codec.SpecialElementRegion;
+import org.weasis.dicom.codec.TagD;
 import org.weasis.dicom.codec.geometry.GeometryOfSlice;
+import org.weasis.dicom.codec.seg.LazyContourLoader;
 import org.weasis.opencv.data.ImageCV;
 import org.weasis.opencv.op.ImageConversion;
-import org.weasis.opencv.seg.Segment;
 
 /**
  * @author Tomas Skripcak
@@ -45,9 +55,23 @@ import org.weasis.opencv.seg.Segment;
  */
 public class Dose extends RtSpecialElement implements SpecialElementRegion {
   private static final Logger LOGGER = LoggerFactory.getLogger(Dose.class);
+
+  /** Default standard isodose levels and their colors (RGB). */
+  private static final List<IsoLevel> STANDARD_LEVELS =
+      List.of(
+          new IsoLevel(102, new Color(170, 0, 0)),
+          new IsoLevel(100, new Color(238, 69, 0)),
+          new IsoLevel(98, new Color(255, 165, 0)),
+          new IsoLevel(95, new Color(255, 255, 0)),
+          new IsoLevel(90, new Color(0, 255, 0)),
+          new IsoLevel(80, new Color(0, 139, 0)),
+          new IsoLevel(70, new Color(0, 255, 255)),
+          new IsoLevel(50, new Color(0, 0, 255)),
+          new IsoLevel(30, new Color(0, 0, 128)));
+
   private final Map<String, Map<String, Set<LazyContourLoader>>> refMap = new HashMap<>();
 
-  private volatile float opacity = 1.0f;
+  private volatile float opacity = 0.5f;
   private volatile boolean visible = false;
 
   private final double[] imagePositionPatient;
@@ -58,17 +82,21 @@ public class Dose extends RtSpecialElement implements SpecialElementRegion {
   private final double[] gridFrameOffsetVector;
   private final double doseGridScaling;
   private double doseMax;
+  private boolean doseMaxComputed;
 
   private final DicomSeries series;
   private double doseSlicePositionThreshold;
 
   private final Map<Integer, IsoDoseRegion> isoDoseSet = new LinkedHashMap<>();
-
   private final Map<Integer, Dvh> dvhMap = new HashMap<>();
 
-  // Dose LUTs
-  private AbstractMap.SimpleImmutableEntry<double[], double[]> doseMmLUT;
-  private AbstractMap.SimpleImmutableEntry<double[], double[]> dosePixLUT;
+  private DoseLut doseMmLUT;
+  private DoseLut dosePixLUT;
+
+  /** Cached patient-coordinate Z position of each dose plane (initial-position + offset vector). */
+  private double[] dosePlanesZ;
+
+  private record IsoLevel(int level, Color color) {}
 
   public Dose(DicomMediaIO mediaIO) {
     super(mediaIO);
@@ -90,119 +118,104 @@ public class Dose extends RtSpecialElement implements SpecialElementRegion {
   }
 
   private void initDvh(Sequence dvhSeq) {
-    if (dvhSeq != null) {
-      for (Attributes dvhAttributes : dvhSeq) {
-
-        // Need to refer to delineated contour
-        Dvh rtDvh = null;
-        Sequence dvhRefRoiSeq = dvhAttributes.getSequence(Tag.DVHReferencedROISequence);
-        if (dvhRefRoiSeq == null) {
-          continue;
-        } else if (dvhRefRoiSeq.size() == 1) {
-          rtDvh = new Dvh();
-          Attributes dvhRefRoiAttributes = dvhRefRoiSeq.getFirst();
-          rtDvh.setReferencedRoiNumber(dvhRefRoiAttributes.getInt(Tag.ReferencedROINumber, -1));
-
-          LOGGER.debug("Found DVH for ROI: {}", rtDvh.getReferencedRoiNumber());
-        }
-
-        if (rtDvh != null) {
-          rtDvh.setDvhSource(DataSource.PROVIDED);
-          // Convert Differential DVH to Cumulative
-          if (dvhSeq.getFirst().getString(Tag.DVHType).equals("DIFFERENTIAL")) {
-
-            LOGGER.info("Not supported: converting differential DVH to cumulative");
-
-            double[] data = dvhAttributes.getDoubles(Tag.DVHData);
-            if (data != null && data.length % 2 == 0) {
-
-              // X of histogram
-              double[] doseX = new double[data.length / 2];
-
-              // Y of histogram
-              double[] volume = new double[data.length / 2];
-
-              // Separate the dose and volume values into distinct arrays
-              for (int i = 0; i < data.length; i = i + 2) {
-                doseX[i] = data[i];
-                volume[i] = data[i + 1];
-              }
-
-              // Get the min and max dose in cGy
-              int minDose = (int) (doseX[0] * 100);
-              int maxDose = (int) DoubleStream.of(doseX).sum();
-
-              // Get volume values
-              double maxVolume = DoubleStream.of(volume).sum();
-
-              // Determine the dose values that are missing from the original data
-              double[] missingDose = new double[minDose];
-              Arrays.fill(missingDose, maxVolume);
-
-              // Cumulative dose - x of histogram
-              // Cumulative volume data - y of histogram
-              double[] cumVolume = new double[doseX.length];
-              double[] cumDose = new double[doseX.length];
-              for (int k = 0; k < doseX.length; k++) {
-                cumVolume[k] = DoubleStream.of(Arrays.copyOfRange(volume, k, doseX.length)).sum();
-                cumDose[k] = DoubleStream.of(Arrays.copyOfRange(doseX, 0, k)).sum() * 100;
-              }
-
-              // Interpolated dose data for 1 cGy bins (between min and max)
-              int[] interpDose = new int[maxDose + 1 - minDose];
-              int m = 0;
-              for (int l = minDose; l < maxDose + 1; l++) {
-                interpDose[m] = l;
-                m++;
-              }
-
-              // Interpolated volume data
-              double[] interpCumVolume = interpolate(interpDose, cumDose, cumVolume);
-
-              // Append the interpolated values to the missing dose values
-              double[] cumDvhData = new double[missingDose.length + interpCumVolume.length];
-              System.arraycopy(missingDose, 0, cumDvhData, 0, cumDvhData.length);
-              System.arraycopy(
-                  interpCumVolume, 0, cumDvhData, missingDose.length, interpCumVolume.length);
-
-              rtDvh.setDvhData(cumDvhData);
-              rtDvh.setDvhNumberOfBins(cumDvhData.length);
-            }
-          }
-          // Cumulative
-          else {
-            // "filler" values are included in DVH data array (every second is DVH value)
-            double[] data = dvhAttributes.getDoubles(Tag.DVHData);
-            if (data != null && data.length % 2 == 0) {
-              double[] newData = new double[data.length / 2];
-
-              int j = 0;
-              for (int i = 1; i < data.length; i = i + 2) {
-                newData[j] = data[i];
-                j++;
-              }
-
-              rtDvh.setDvhData(newData);
-            }
-
-            rtDvh.setDvhNumberOfBins(dvhAttributes.getInt(Tag.DVHNumberOfBins, -1));
-          }
-
-          // Always cumulative - differential was converted
-          rtDvh.setType("CUMULATIVE");
-          rtDvh.setDoseUnit(dvhAttributes.getString(Tag.DoseUnits));
-          rtDvh.setDoseType(dvhAttributes.getString(Tag.DoseType));
-          rtDvh.setDvhDoseScaling(dvhAttributes.getDouble(Tag.DVHDoseScaling, 1.0));
-          rtDvh.setDvhVolumeUnit(dvhAttributes.getString(Tag.DVHVolumeUnits));
-          // -1.0 means that it needs to be calculated later
-          rtDvh.setDvhMinimumDose(dvhAttributes.getDouble(Tag.DVHMinimumDose, -1.0));
-          rtDvh.setDvhMaximumDose(dvhAttributes.getDouble(Tag.DVHMaximumDose, -1.0));
-          rtDvh.setDvhMeanDose(dvhAttributes.getDouble(Tag.DVHMeanDose, -1.0));
-
-          dvhMap.put(rtDvh.getReferencedRoiNumber(), rtDvh);
-        }
-      }
+    if (dvhSeq == null) {
+      return;
     }
+    for (Attributes dvhAttributes : dvhSeq) {
+      Sequence dvhRefRoiSeq = dvhAttributes.getSequence(Tag.DVHReferencedROISequence);
+      if (dvhRefRoiSeq == null || dvhRefRoiSeq.size() != 1) {
+        continue;
+      }
+      Dvh rtDvh = new Dvh();
+      rtDvh.setReferencedRoiNumber(dvhRefRoiSeq.getFirst().getInt(Tag.ReferencedROINumber, -1));
+      rtDvh.setDvhSource(DataSource.PROVIDED);
+      LOGGER.debug("Found DVH for ROI: {}", rtDvh.getReferencedRoiNumber());
+
+      String dvhType = dvhAttributes.getString(Tag.DVHType);
+      if ("DIFFERENTIAL".equals(dvhType)) {
+        parseDifferentialDvh(rtDvh, dvhAttributes);
+      } else {
+        parseCumulativeDvh(rtDvh, dvhAttributes);
+      }
+      populateDvhMetadata(rtDvh, dvhAttributes);
+      dvhMap.put(rtDvh.getReferencedRoiNumber(), rtDvh);
+    }
+  }
+
+  private static void parseDifferentialDvh(Dvh rtDvh, Attributes att) {
+    LOGGER.info("Not supported: converting differential DVH to cumulative");
+    double[] data = att.getDoubles(Tag.DVHData);
+    if (data == null || data.length % 2 != 0) {
+      return;
+    }
+    int half = data.length / 2;
+    double[] doseX = new double[half];
+    double[] volume = new double[half];
+    double maxVolume = 0.0;
+    double sumDose = 0.0;
+    for (int i = 0, j = 0; i < data.length; i += 2, j++) {
+      doseX[j] = data[i];
+      volume[j] = data[i + 1];
+      maxVolume += data[i + 1];
+      sumDose += data[i];
+    }
+
+    int minDose = (int) (doseX[0] * 100);
+    int maxDose = (int) sumDose;
+
+    // Suffix sums (cumulative volume from the right) and prefix sums (cumulative dose from
+    // the left), each computed in a single pass instead of repeatedly summing slices (was O(n²)).
+    double[] cumVolume = new double[half];
+    double[] cumDose = new double[half];
+    double suffix = 0.0;
+    double prefix = 0.0;
+    for (int k = half - 1; k >= 0; k--) {
+      suffix += volume[k];
+      cumVolume[k] = suffix;
+    }
+    for (int k = 0; k < half; k++) {
+      cumDose[k] = prefix * 100;
+      prefix += doseX[k];
+    }
+
+    int[] interpDose = new int[maxDose + 1 - minDose];
+    for (int l = 0; l < interpDose.length; l++) {
+      interpDose[l] = minDose + l;
+    }
+    double[] interpCumVolume = interpolate(interpDose, cumDose, cumVolume);
+
+    double[] cumDvhData = new double[minDose + interpCumVolume.length];
+    for (int i = 0; i < minDose; i++) {
+      cumDvhData[i] = maxVolume;
+    }
+    System.arraycopy(interpCumVolume, 0, cumDvhData, minDose, interpCumVolume.length);
+    rtDvh.setDvhData(cumDvhData);
+    rtDvh.setDvhNumberOfBins(cumDvhData.length);
+  }
+
+  private static void parseCumulativeDvh(Dvh rtDvh, Attributes att) {
+    // "filler" values are included in DVH data array (every second is DVH value)
+    double[] data = att.getDoubles(Tag.DVHData);
+    if (data != null && data.length % 2 == 0) {
+      double[] newData = new double[data.length / 2];
+      for (int i = 1, j = 0; i < data.length; i += 2, j++) {
+        newData[j] = data[i];
+      }
+      rtDvh.setDvhData(newData);
+    }
+    rtDvh.setDvhNumberOfBins(att.getInt(Tag.DVHNumberOfBins, -1));
+  }
+
+  private static void populateDvhMetadata(Dvh rtDvh, Attributes att) {
+    rtDvh.setType("CUMULATIVE");
+    rtDvh.setDoseUnit(att.getString(Tag.DoseUnits));
+    rtDvh.setDoseType(att.getString(Tag.DoseType));
+    rtDvh.setDvhDoseScaling(att.getDouble(Tag.DVHDoseScaling, 1.0));
+    rtDvh.setDvhVolumeUnit(att.getString(Tag.DVHVolumeUnits));
+    // -1.0 means that it needs to be calculated later
+    rtDvh.setDvhMinimumDose(att.getDouble(Tag.DVHMinimumDose, -1.0));
+    rtDvh.setDvhMaximumDose(att.getDouble(Tag.DVHMaximumDose, -1.0));
+    rtDvh.setDvhMeanDose(att.getDouble(Tag.DVHMeanDose, -1.0));
   }
 
   public DicomSeries getSeries() {
@@ -218,8 +231,8 @@ public class Dose extends RtSpecialElement implements SpecialElementRegion {
   }
 
   @Override
-  public Map<String, Set<LazyContourLoader>> getPositionMap() {
-    return Map.of();
+  public NavigableMap<Double, Set<LazyContourLoader>> getPositionMap() {
+    return SpecialElementRegion.emptyPositionMap();
   }
 
   public Map<Integer, IsoDoseRegion> getSegAttributes() {
@@ -239,7 +252,7 @@ public class Dose extends RtSpecialElement implements SpecialElementRegion {
   }
 
   public void setOpacity(float opacity) {
-    this.opacity = Math.max(0.0f, Math.min(opacity, 1.0f));
+    this.opacity = Math.clamp(opacity, 0.0f, 1.0f);
     updateOpacityInSegAttributes(this.opacity);
   }
 
@@ -263,11 +276,11 @@ public class Dose extends RtSpecialElement implements SpecialElementRegion {
   }
 
   public String getComment() {
-    return this.comment;
+    return comment;
   }
 
   public String getDoseUnit() {
-    return this.doseUnit;
+    return doseUnit;
   }
 
   public String getDoseType() {
@@ -279,33 +292,33 @@ public class Dose extends RtSpecialElement implements SpecialElementRegion {
   }
 
   public double[] getGridFrameOffsetVector() {
-    return this.gridFrameOffsetVector;
+    return gridFrameOffsetVector;
   }
 
   public double getDoseGridScaling() {
     return doseGridScaling;
   }
 
+  /** Returns the maximum raw dose value across the whole RT Dose series (computed once, cached). */
   public double getDoseMax() {
-    // Initialise max dose once dose images are available
-    if (this.series.size(null) > 1 && doseMax < 0.01) {
+    if (!doseMaxComputed && series.size(null) > 1) {
+      doseMaxComputed = true;
       for (DicomImageElement img : series.getMedias(null, null)) {
         try {
-          Core.MinMaxLocResult minMaxLoc = minMaxLoc(img.getImage().toMat());
-          if (doseMax < minMaxLoc.maxVal) {
-            doseMax = minMaxLoc.maxVal;
+          double m = minMaxLoc(img.getImage().toMat()).maxVal;
+          if (m > doseMax) {
+            doseMax = m;
           }
         } catch (Exception e) {
           LOGGER.error("Get max dose", e);
         }
       }
     }
-
     return doseMax;
   }
 
   public double getDoseSlicePositionThreshold() {
-    return this.doseSlicePositionThreshold;
+    return doseSlicePositionThreshold;
   }
 
   public void setDoseSlicePositionThreshold(double doseSlicePositionThreshold) {
@@ -313,230 +326,212 @@ public class Dose extends RtSpecialElement implements SpecialElementRegion {
   }
 
   public Map<Integer, IsoDoseRegion> getIsoDoseSet() {
-    return this.isoDoseSet;
+    return isoDoseSet;
   }
 
-  public AbstractMap.SimpleImmutableEntry<double[], double[]> getDoseMmLUT() {
-    return this.doseMmLUT;
+  public DoseLut getDoseMmLUT() {
+    return doseMmLUT;
   }
 
-  public void setDoseMmLUT(AbstractMap.SimpleImmutableEntry<double[], double[]> lut) {
+  public void setDoseMmLUT(DoseLut lut) {
     this.doseMmLUT = lut;
   }
 
-  public AbstractMap.SimpleImmutableEntry<double[], double[]> getDosePixLUT() {
-    return this.dosePixLUT;
+  public DoseLut getDosePixLUT() {
+    return dosePixLUT;
   }
 
-  public void setDosePixLUT(AbstractMap.SimpleImmutableEntry<double[], double[]> lut) {
+  public void setDosePixLUT(DoseLut lut) {
     this.dosePixLUT = lut;
   }
 
+  /**
+   * Builds the standard set of isodose levels for the given prescribed dose and produces the
+   * corresponding contour overlays for every CT slice in the patient series.
+   */
   public void initDoseSet(double rxDose, RtSet rtSet) {
     int doseMaxLevel =
-        (int) Dose.calculateRelativeDose((getDoseMax() * getDoseGridScaling() * 100), rxDose);
+        (int) calculateRelativeDose((getDoseMax() * getDoseGridScaling() * 100), rxDose);
+    if (doseMaxLevel <= 0) {
+      return;
+    }
+    String seriesUID =
+        TagD.getTagValue(rtSet.getPatientImage().getImage(), Tag.SeriesInstanceUID, String.class);
+    seedIsoDoseLevels(doseMaxLevel, rxDose);
+    buildIsoDoseContoursPerSlice(rtSet, seriesUID);
+  }
 
-    // Max and standard levels 102, 100, 98, 95, 90, 80, 70, 50, 30
-    if (doseMaxLevel > 0) {
-      String seriesUID =
-          TagD.getTagValue(rtSet.getPatientImage().getImage(), Tag.SeriesInstanceUID, String.class);
+  private void seedIsoDoseLevels(int doseMaxLevel, double rxDose) {
+    isoDoseSet.put(
+        doseMaxLevel,
+        new IsoDoseRegion(
+            doseMaxLevel, withOpacity(new Color(120, 0, 0)), "Max", rxDose)); // NON-NLS
+    for (IsoLevel iso : STANDARD_LEVELS) {
       isoDoseSet.put(
-          doseMaxLevel,
-          new IsoDoseRegion(
-              doseMaxLevel,
-              new Color(120 / 255f, 0, 0, opacity),
-              "Max", // NON-NLS
-              rxDose)); // NON-NLS
-      isoDoseSet.put(102, new IsoDoseRegion(102, new Color(170 / 255f, 0, 0, opacity), "", rxDose));
-      isoDoseSet.put(
-          100, new IsoDoseRegion(100, new Color(238 / 255f, 69 / 255f, 0, opacity), "", rxDose));
-      isoDoseSet.put(98, new IsoDoseRegion(98, new Color(1f, 165 / 255f, 0, opacity), "", rxDose));
-      isoDoseSet.put(95, new IsoDoseRegion(95, new Color(1f, 1f, 0, opacity), "", rxDose));
-      isoDoseSet.put(90, new IsoDoseRegion(90, new Color(0, 1f, 0, opacity), "", rxDose));
-      isoDoseSet.put(80, new IsoDoseRegion(80, new Color(0, 139 / 255f, 0, opacity), "", rxDose));
-      isoDoseSet.put(70, new IsoDoseRegion(70, new Color(0, 1f, 1f, opacity), "", rxDose));
-      isoDoseSet.put(50, new IsoDoseRegion(50, new Color(0, 0, 1f, opacity), "", rxDose));
-      isoDoseSet.put(30, new IsoDoseRegion(30, new Color(0, 0, 128 / 255f, opacity), "", rxDose));
+          iso.level(), new IsoDoseRegion(iso.level(), withOpacity(iso.color()), "", rxDose));
+    }
+  }
 
-      // Commented level just for testing
-      //           isoDoseSet.put(2, new IsoDoseLayer(new IsoDose(2, new Color(0, 0,
-      // 111/255f,
-      //           opacity), "", rxDose)));
-      Map<String, Set<LazyContourLoader>> map =
-          refMap.computeIfAbsent(seriesUID, _ -> new HashMap<>());
-      Set<KeyDouble> zSet = new LinkedHashSet<>();
-      // Go through whole imaging grid (CT)
-      for (DicomImageElement image : rtSet.getSeries().getMedias(null, null)) {
-        PlaneContourLoader contours = new PlaneContourLoader();
-        // Image slice UID and position
-        String sopUID = TagD.getTagValue(image, Tag.SOPInstanceUID, String.class);
-        KeyDouble z = new KeyDouble(image.getRawSliceGeometry().getTLHC().z);
+  private Color withOpacity(Color base) {
+    return new Color(base.getRed() / 255f, base.getGreen() / 255f, base.getBlue() / 255f, opacity);
+  }
 
-        List<IsoDoseRegion> reverseValues = new ArrayList<>(isoDoseSet.values());
-        Collections.reverse(reverseValues);
-        for (IsoDoseRegion doseRegion : reverseValues) {
-          zSet.add(z);
-          double isoDoseThreshold = doseRegion.getAbsoluteDose();
+  private void buildIsoDoseContoursPerSlice(RtSet rtSet, String seriesUID) {
+    Map<String, Set<LazyContourLoader>> map =
+        refMap.computeIfAbsent(seriesUID, _ -> new HashMap<>());
+    Set<KeyDouble> zSet = new LinkedHashSet<>();
 
-          StructContour isoContour = getIsoDoseContour(z, isoDoseThreshold, doseRegion, rtSet);
-          if (isoContour == null) {
-            continue;
-          }
+    // Reverse iteration so the largest (outermost) isodose is drawn first
+    List<IsoDoseRegion> reverseLevels = new ArrayList<>(isoDoseSet.values());
+    for (DicomImageElement image : rtSet.getSeries().getMedias(null, null)) {
+      String sopUID = TagD.getTagValue(image, Tag.SOPInstanceUID, String.class);
+      KeyDouble z = new KeyDouble(image.getRawSliceGeometry().getTLHC().z);
+      zSet.add(z);
+
+      PlaneContourLoader contours = new PlaneContourLoader();
+      for (ListIterator<IsoDoseRegion> it = reverseLevels.listIterator(reverseLevels.size());
+          it.hasPrevious(); ) {
+        IsoDoseRegion doseRegion = it.previous();
+        StructContour isoContour =
+            getIsoDoseContour(z, doseRegion.getAbsoluteDose(), doseRegion, rtSet);
+        if (isoContour != null) {
           contours.addContour(isoContour);
         }
-        if (contours.getLazyContours().isEmpty()) {
-          map.remove(sopUID);
-        } else {
-          map.computeIfAbsent(sopUID, _ -> new LinkedHashSet<>()).add(contours);
-        }
       }
+      if (contours.getLazyContours().isEmpty()) {
+        map.remove(sopUID);
+      } else {
+        map.computeIfAbsent(sopUID, _ -> new LinkedHashSet<>()).add(contours);
+      }
+    }
 
-      // When finished creation of iso contours plane data calculate the plane thickness
-      for (IsoDoseRegion isoDoseLayer : isoDoseSet.values()) {
-        isoDoseLayer.setThickness(RtSet.calculatePlaneThickness(zSet));
-      }
+    double thickness = RtSet.calculatePlaneThickness(zSet);
+    for (IsoDoseRegion isoDoseLayer : isoDoseSet.values()) {
+      isoDoseLayer.setThickness(thickness);
     }
   }
 
   void initPlan(RtSet rtSet) {
     DicomMediaIO reader = getMediaReader();
-    Plan plan = null;
     Attributes dcmItems = reader.getDicomObject();
-    if (dcmItems != null) {
-      // Dose is Referencing Plan
-      String referencedPlanUid = "";
-      Sequence refPlanSeq = dcmItems.getSequence(Tag.ReferencedRTPlanSequence);
-      if (refPlanSeq != null) {
-        for (Attributes refRtPlanSeq : refPlanSeq) {
-          referencedPlanUid = refRtPlanSeq.getString(Tag.ReferencedSOPInstanceUID);
-        }
-      }
+    if (dcmItems == null) {
+      return;
+    }
 
-      Set<Plan> plans = rtSet.getPlans();
-      // Plan is already loaded
-      if (!plans.isEmpty()) {
-        String finalReferencedPlanUid = referencedPlanUid;
-        Optional<Plan> opPlan =
-            plans.stream()
-                .filter(p -> p.getSopInstanceUid().equals(finalReferencedPlanUid))
-                .findFirst();
-        if (opPlan.isPresent()) {
-          plan = opPlan.get();
-        }
-      }
-      // Dummy plan will be created
-      else {
-        plan = new Plan(reader);
-        plan.setSopInstanceUid(referencedPlanUid);
-        plans.add(plan);
-      }
-      if (plan != null) {
-        plan.getDoses().add(this);
-      }
+    // RT Dose may reference at most one RT Plan; keep the last reference if several are listed.
+    String referencedPlanUid = "";
+    Sequence refPlanSeq = dcmItems.getSequence(Tag.ReferencedRTPlanSequence);
+    if (refPlanSeq != null && !refPlanSeq.isEmpty()) {
+      referencedPlanUid = refPlanSeq.getLast().getString(Tag.ReferencedSOPInstanceUID);
+    }
+
+    Set<Plan> plans = rtSet.getPlans();
+    Plan plan;
+    if (plans.isEmpty()) {
+      plan = new Plan(reader);
+      plan.setSopInstanceUid(referencedPlanUid);
+      plans.add(plan);
+    } else {
+      String finalReferencedPlanUid = referencedPlanUid;
+      plan =
+          plans.stream()
+              .filter(p -> p.getSopInstanceUid().equals(finalReferencedPlanUid))
+              .findFirst()
+              .orElse(null);
+    }
+    if (plan != null) {
+      plan.getDoses().add(this);
     }
   }
 
+  /**
+   * Returns the dose plane closest to {@code slicePosition} (in patient mm). Returns the nearest
+   * stored plane if it lies within {@link #doseSlicePositionThreshold} mm, otherwise an
+   * interpolated plane between the two nearest neighbours.
+   */
   public MediaElement getDosePlaneBySlice(double slicePosition) {
-    MediaElement dosePlane = null;
+    if (gridFrameOffsetVector.length == 0) {
+      return null;
+    }
+    double[] zArr = computeDosePlanesZ();
 
-    // If dose contains a multi-frame dose pixel array
-    if (this.gridFrameOffsetVector.length > 0) {
-
-      // Initial dose grid position Z (in patient coordinates)
-      double imagePatientPositionZ = this.imagePositionPatient[2];
-
-      // Add initial image patient position Z to the offset vector to determine the Z coordinate of
-      // each dose
-      // plane
-      double[] dosePlanesZ = new double[this.gridFrameOffsetVector.length];
-      for (int i = 0; i < dosePlanesZ.length; i++) {
-        dosePlanesZ[i] = this.gridFrameOffsetVector[i] + imagePatientPositionZ;
-      }
-
-      // Check whether the requested plane is within the dose grid boundaries
-      if (Arrays.stream(dosePlanesZ).min().getAsDouble() <= slicePosition
-          && slicePosition <= Arrays.stream(dosePlanesZ).max().getAsDouble()) {
-
-        // Calculate the absolute distance vector between dose planes and requested slice position
-        double[] absoluteDistance = new double[dosePlanesZ.length];
-        for (int i = 0; i < absoluteDistance.length; i++) {
-          absoluteDistance[i] = Math.abs(dosePlanesZ[i] - slicePosition);
-        }
-
-        // Check to see if the requested plane exists in the array (or is close enough)
-        int doseSlicePosition = -1;
-        double minDistance = Arrays.stream(absoluteDistance).min().getAsDouble();
-        if (minDistance < this.doseSlicePositionThreshold) {
-          doseSlicePosition = firstIndexOf(absoluteDistance, minDistance, 0.001);
-        }
-
-        // Dose slice position found return the plane
-        if (doseSlicePosition != -1) {
-          dosePlane = series.getMedia(doseSlicePosition, null, null);
-        }
-        // There is no dose plane for such slice position, so interpolate between planes
-        else {
-
-          // First minimum distance - upper boundary
-          int upperBoundaryIndex = firstIndexOf(absoluteDistance, minDistance, 0.001);
-
-          // Prepare modified absolute distance vector to find the second minimum
-          double[] modifiedAbsoluteDistance =
-              Arrays.copyOf(absoluteDistance, absoluteDistance.length);
-          modifiedAbsoluteDistance[upperBoundaryIndex] =
-              Arrays.stream(absoluteDistance).max().getAsDouble();
-
-          // Second minimum distance - lower boundary
-          minDistance = Arrays.stream(modifiedAbsoluteDistance).min().getAsDouble();
-          int lowerBoundaryIndex = firstIndexOf(modifiedAbsoluteDistance, minDistance, 0.001);
-
-          // Fractional distance of dose plane between upper and lower boundary (from bottom to top)
-          // E.g. if = 1, the plane is at the upper plane, = 0, it is at the lower plane.
-          double fractionalDistance =
-              (slicePosition - dosePlanesZ[lowerBoundaryIndex])
-                  / (dosePlanesZ[upperBoundaryIndex] - dosePlanesZ[lowerBoundaryIndex]);
-
-          dosePlane =
-              this.interpolateDosePlanes(
-                  upperBoundaryIndex, lowerBoundaryIndex, fractionalDistance);
-        }
+    // Single pass: compute min/max bounds and the closest plane.
+    double minZ = zArr[0];
+    double maxZ = zArr[0];
+    int closestIndex = 0;
+    double closestDistance = Math.abs(zArr[0] - slicePosition);
+    for (int i = 1; i < zArr.length; i++) {
+      double z = zArr[i];
+      if (z < minZ) minZ = z;
+      else if (z > maxZ) maxZ = z;
+      double d = Math.abs(z - slicePosition);
+      if (d < closestDistance) {
+        closestDistance = d;
+        closestIndex = i;
       }
     }
+    if (slicePosition < minZ || slicePosition > maxZ) {
+      return null;
+    }
+    if (closestDistance < doseSlicePositionThreshold) {
+      return series.getMedia(closestIndex, null, null);
+    }
 
-    return dosePlane;
+    // Otherwise interpolate between the two nearest planes
+    int secondIndex = secondNearest(zArr, closestIndex, slicePosition);
+    double fractionalDistance =
+        (slicePosition - zArr[secondIndex]) / (zArr[closestIndex] - zArr[secondIndex]);
+    return interpolateDosePlanes(closestIndex, secondIndex, fractionalDistance);
+  }
+
+  private static int secondNearest(double[] zArr, int exclude, double slicePosition) {
+    int idx = 0;
+    double best = Double.POSITIVE_INFINITY;
+    for (int i = 0; i < zArr.length; i++) {
+      if (i == exclude) continue;
+      double d = Math.abs(zArr[i] - slicePosition);
+      if (d < best) {
+        best = d;
+        idx = i;
+      }
+    }
+    return idx;
+  }
+
+  private double[] computeDosePlanesZ() {
+    if (dosePlanesZ == null) {
+      double[] arr = new double[gridFrameOffsetVector.length];
+      double base = imagePositionPatient[2];
+      for (int i = 0; i < arr.length; i++) {
+        arr[i] = gridFrameOffsetVector[i] + base;
+      }
+      dosePlanesZ = arr;
+    }
+    return dosePlanesZ;
   }
 
   public Mat getMaskedDosePlaneHist(double slicePosition, Mat mask, int maxDose) {
+    DicomImageElement dosePlane = (DicomImageElement) getDosePlaneBySlice(slicePosition);
+    Mat raw = dosePlane.getImage().toMat();
 
-    DicomImageElement dosePlane = (DicomImageElement) this.getDosePlaneBySlice(slicePosition);
-
-    int rows = dosePlane.getImage().toMat().rows();
-    int cols = dosePlane.getImage().toMat().cols();
-
-    // Calculate dose matrix for OpenCV
-    Mat src = new Mat(rows, cols, CvType.CV_32FC1);
-    dosePlane.getImage().toMat().convertTo(src, CvType.CV_32FC1);
-    Scalar scalar = new Scalar(this.doseGridScaling * 100);
-    Mat doseMatrix = new Mat(rows, cols, CvType.CV_32FC1);
-    multiply(src, scalar, doseMatrix);
+    Mat src = new Mat(raw.rows(), raw.cols(), CvType.CV_32FC1);
+    raw.convertTo(src, CvType.CV_32FC1);
+    Mat doseMatrix = new Mat(raw.rows(), raw.cols(), CvType.CV_32FC1);
+    multiply(src, new Scalar(doseGridScaling * 100), doseMatrix);
     ImageConversion.releaseMat(src);
-    List<Mat> doseMatrixVector = new ArrayList<>();
-    doseMatrixVector.add(doseMatrix);
 
-    // Masked dose plan histogram
-    Mat hist = new Mat();
-    // Number of histogram bins
-    MatOfInt histSize = new MatOfInt(maxDose);
-    // Dose varies from 0 to maxDose
-    MatOfFloat histRange = new MatOfFloat(0, maxDose);
-    // Only one 0-th channel
-    MatOfInt channels = new MatOfInt(0);
-
-    // Ned to change the structure dose mask type vor OpenCV histogram calculation
     Mat maskSrc = new Mat(mask.rows(), mask.cols(), CvType.CV_8U);
     mask.convertTo(maskSrc, CvType.CV_8U);
 
-    Imgproc.calcHist(doseMatrixVector, channels, maskSrc, hist, histSize, histRange);
+    Mat hist = new Mat();
+    Imgproc.calcHist(
+        List.of(doseMatrix),
+        new MatOfInt(0),
+        maskSrc,
+        hist,
+        new MatOfInt(maxDose),
+        new MatOfFloat(0, maxDose));
+
     ImageConversion.releaseMat(maskSrc);
     ImageConversion.releaseMat(doseMatrix);
     return hist;
@@ -544,109 +539,128 @@ public class Dose extends RtSpecialElement implements SpecialElementRegion {
 
   public StructContour getIsoDoseContour(
       KeyDouble slicePosition, double isoDoseThreshold, IsoDoseRegion region, RtSet rtSet) {
-    if (region.getMeasurableLayer() == null) {
-      //  region.setMeasurableLayer(getMeasurableLayer(img, contour));
-    }
-
-    // Convert from threshold in cCy to raw pixel value threshold
-    double rawThreshold = (isoDoseThreshold / 100) / this.doseGridScaling;
-    DicomImageElement dosePlane =
-        (DicomImageElement) this.getDosePlaneBySlice(slicePosition.getValue());
-
-    int rows = dosePlane.getImage().toMat().rows();
-    int cols = dosePlane.getImage().toMat().cols();
-
-    Mat src = new Mat(rows, cols, CvType.CV_32FC1);
-    Mat thr = new Mat(rows, cols, CvType.CV_32FC1);
-
-    dosePlane.getImage().toMat().convertTo(src, CvType.CV_32FC1);
-
-    Imgproc.threshold(src, thr, rawThreshold, 255, Imgproc.THRESH_BINARY);
-    ImageConversion.releaseMat(src);
-    Mat thrSrc = new Mat(rows, cols, CvType.CV_8U);
-    thr.convertTo(thrSrc, CvType.CV_8U);
-    ImageConversion.releaseMat(thr);
-
-    List<Segment> segmentList = SegContour.buildSegmentList(ImageCV.fromMat(thrSrc));
-    if (segmentList.isEmpty()) {
-      ImageConversion.releaseMat(thrSrc);
+    // Convert from threshold in cGy to raw pixel value threshold
+    double rawThreshold = (isoDoseThreshold / 100) / doseGridScaling;
+    DicomImageElement dosePlane = (DicomImageElement) getDosePlaneBySlice(slicePosition.getValue());
+    if (dosePlane == null || dosePlane.getImage() == null) {
       return null;
     }
 
-    int nbPixels = Core.countNonZero(thrSrc);
-    ImageConversion.releaseMat(thrSrc);
-
-    GeometryOfSlice geometry = rtSet.getPatientImage().getImage().getSliceGeometry();
+    Image patientImage = rtSet.getPatientImage();
+    if (patientImage == null || doseMmLUT == null) {
+      return null;
+    }
+    double[] mmX = doseMmLUT.x();
+    double[] mmY = doseMmLUT.y();
+    if (mmX == null || mmY == null || mmX.length < 2 || mmY.length < 2) {
+      return null;
+    }
+    GeometryOfSlice geometry = patientImage.getImage().getSliceGeometry();
     Vector3d voxelSpacing = geometry.getVoxelSpacing();
-    if (voxelSpacing.x < 0.00001 || voxelSpacing.y < 0.00001) {
+    if (voxelSpacing.x < MIN_SPACING || voxelSpacing.y < MIN_SPACING) {
       return null;
     }
 
-    double z = slicePosition.getValue();
-    transformGeometry(geometry, z, segmentList);
+    Mat doseMask = buildBinaryDoseMask(dosePlane, rawThreshold);
+    Mat affine = buildAffineDoseToImage(geometry, mmX, mmY, voxelSpacing, slicePosition.getValue());
+    Mat resampled =
+        resampleMaskToImage(doseMask, affine, patientImage.getWidth(), patientImage.getHeight());
+
+    int nbPixels = Core.countNonZero(resampled);
+    if (nbPixels == 0) {
+      ImageConversion.releaseMat(resampled);
+      return null;
+    }
 
     StructContour segContour =
-        new StructContour(String.valueOf(slicePosition.getKey()), segmentList, nbPixels);
-    segContour.setPositionZ(z);
+        new StructContour(
+            String.valueOf(slicePosition.getKey()), ImageCV.fromMat(resampled), nbPixels);
+    segContour.setPositionZ(slicePosition.getValue());
     region.addPixels(segContour);
     segContour.setAttributes(region);
     return segContour;
   }
 
-  private void transformGeometry(GeometryOfSlice geometry, double z, List<Segment> segmentList) {
+  private static Mat buildBinaryDoseMask(DicomImageElement dosePlane, double rawThreshold) {
+    Mat src = dosePlane.getImage().toMat();
+    Mat srcF = new Mat();
+    src.convertTo(srcF, CvType.CV_32FC1);
+    Mat thr = new Mat();
+    Imgproc.threshold(srcF, thr, rawThreshold, 255, Imgproc.THRESH_BINARY);
+    ImageConversion.releaseMat(srcF);
+    Mat doseMask = new Mat();
+    thr.convertTo(doseMask, CvType.CV_8UC1);
+    ImageConversion.releaseMat(thr);
+    return doseMask;
+  }
+
+  private static Mat buildAffineDoseToImage(
+      GeometryOfSlice geometry, double[] mmX, double[] mmY, Vector3d voxelSpacing, double z) {
+    // dose-grid pixel (i, j) -> patient-image pixel via mm space (TLHC/row/column/voxel spacing).
     Vector3d tlhc = geometry.getTLHC();
     Vector3d row = geometry.getRow();
     Vector3d column = geometry.getColumn();
-    Vector3d voxelSpacing = geometry.getVoxelSpacing();
+    double bx = (mmX[mmX.length - 1] - mmX[0]) / (mmX.length - 1);
+    double by = (mmY[mmY.length - 1] - mmY[0]) / (mmY.length - 1);
+    double ax = mmX[0];
+    double ay = mmY[0];
 
-    for (Segment segment : segmentList) {
-      for (Point2D pt : segment) {
-        double sx = doseMmLUT.getKey()[(int) pt.getX()];
-        double sy = doseMmLUT.getValue()[(int) pt.getY()];
-        double x =
-            ((sx - tlhc.x) * row.x + (sy - tlhc.y) * row.y + (z - tlhc.z) * row.z) / voxelSpacing.x;
-        double y =
-            ((sx - tlhc.x) * column.x + (sy - tlhc.y) * column.y + (z - tlhc.z) * column.z)
-                / voxelSpacing.y;
-        pt.setLocation(x, y);
-      }
-      List<Segment> children = segment.getChildren();
-      if (!children.isEmpty()) {
-        transformGeometry(geometry, z, children);
-      }
-    }
+    double a = bx * row.x / voxelSpacing.x;
+    double b = by * row.y / voxelSpacing.x;
+    double c =
+        ((ax - tlhc.x) * row.x + (ay - tlhc.y) * row.y + (z - tlhc.z) * row.z) / voxelSpacing.x;
+    double d = bx * column.x / voxelSpacing.y;
+    double e = by * column.y / voxelSpacing.y;
+    double f =
+        ((ax - tlhc.x) * column.x + (ay - tlhc.y) * column.y + (z - tlhc.z) * column.z)
+            / voxelSpacing.y;
+
+    Mat affine = new Mat(2, 3, CvType.CV_64FC1);
+    affine.put(0, 0, a, b, c, d, e, f);
+    return affine;
+  }
+
+  private static Mat resampleMaskToImage(Mat doseMask, Mat affine, int imgW, int imgH) {
+    Mat resampled = new Mat();
+    Imgproc.warpAffine(
+        doseMask,
+        resampled,
+        affine,
+        new Size(imgW, imgH),
+        Imgproc.INTER_NEAREST,
+        Core.BORDER_CONSTANT,
+        Scalar.all(0));
+    affine.release();
+    ImageConversion.releaseMat(doseMask);
+    return resampled;
   }
 
   public void initialiseDoseGridToImageGrid(Image patientImage) {
+    double[] doseX = doseMmLUT.x();
+    double[] doseY = doseMmLUT.y();
+    double[] imgLutX = patientImage.getImageLUT().x();
+    double[] imgLutY = patientImage.getImageLUT().y();
+    int prone = patientImage.getProne();
+    int feetFirst = patientImage.getFeetFirst();
+    Vector3d sp = patientImage.getImageSpacing();
 
-    // Transpose the dose grid LUT onto the image grid LUT
-    double[] x = new double[this.doseMmLUT.getKey().length];
-    for (int i = 0; i < this.doseMmLUT.getKey().length; i++) {
-      x[i] =
-          (this.doseMmLUT.getKey()[i] - patientImage.getImageLUT().getKey()[0])
-              * patientImage.getProne()
-              * patientImage.getFeetFirst()
-              / patientImage.getImageSpacing().x;
+    double[] x = new double[doseX.length];
+    for (int i = 0; i < doseX.length; i++) {
+      x[i] = (doseX[i] - imgLutX[0]) * prone * feetFirst / sp.x;
     }
-    double[] y = new double[this.doseMmLUT.getValue().length];
-    for (int j = 0; j < this.doseMmLUT.getValue().length; j++) {
-      y[j] =
-          (this.doseMmLUT.getValue()[j])
-              - patientImage.getImageLUT().getValue()[0]
-                  * patientImage.getProne()
-                  / patientImage.getImageSpacing().y;
+    double[] y = new double[doseY.length];
+    for (int j = 0; j < doseY.length; j++) {
+      y[j] = doseY[j] - imgLutY[0] * prone / sp.y;
     }
-    this.dosePixLUT = new AbstractMap.SimpleImmutableEntry<>(x, y);
+    this.dosePixLUT = new DoseLut(x, y);
   }
 
   private MediaElement interpolateDosePlanes(
       int upperBoundaryIndex, int lowerBoundaryIndex, double fractionalDistance) {
-    MediaElement dosePlane = null;
-
     DicomImageElement upperPlane = series.getMedia(upperBoundaryIndex, null, null);
     DicomImageElement lowerPlane = series.getMedia(lowerBoundaryIndex, null, null);
 
-    // A simple linear interpolation (lerp)
+    // Linear interpolation (lerp) of the two planes
     Mat dosePlaneMat = new Mat();
     addWeighted(
         lowerPlane.getImage().toMat(),
@@ -656,53 +670,29 @@ public class Dose extends RtSpecialElement implements SpecialElementRegion {
         0.0,
         dosePlaneMat);
 
-    // TODO: dosePlaneMat should be an image for new dosePlane MediaElement
-
-    return dosePlane;
-  }
-
-  private static int firstIndexOf(double[] array, double valueToFind, double tolerance) {
-    for (int i = 0; i < array.length; i++) {
-      if (Math.abs(array[i] - valueToFind) < tolerance) {
-        return i;
-      }
-    }
-    return -1;
+    // TODO: wrap dosePlaneMat as a MediaElement; until then return null so the caller skips it.
+    return null;
   }
 
   private static double[] interpolate(
       int[] interpolatedX, double[] xCoordinates, double[] yCoordinates) {
     double[] interpolatedY = new double[interpolatedX.length];
-
     PolynomialSplineFunction psf = interpolate(xCoordinates, yCoordinates);
-
-    for (int i = 0; i <= interpolatedX.length; ++i) {
-      interpolatedY[0] = psf.value(interpolatedX[i]);
+    for (int i = 0; i < interpolatedX.length; i++) {
+      interpolatedY[i] = psf.value(interpolatedX[i]);
     }
-
     return interpolatedY;
   }
 
   public static PolynomialSplineFunction interpolate(double[] x, double[] y) {
     if (x.length != y.length || x.length < 2) {
-      throw new IllegalStateException();
+      throw new IllegalArgumentException("invalid interpolation input");
     }
-
-    // Number of intervals
     int length = x.length - 1;
-
-    // Slope of the lines between the data points
-    final double[] m = new double[length];
+    PolynomialFunction[] polynomials = new PolynomialFunction[length];
     for (int i = 0; i < length; i++) {
-      m[i] = (y[i + 1] - y[i]) / (x[i + 1] - x[i]);
-    }
-
-    final PolynomialFunction[] polynomials = new PolynomialFunction[length];
-    final double[] coefficients = new double[2];
-    for (int i = 0; i < length; i++) {
-      coefficients[0] = y[i];
-      coefficients[1] = m[i];
-      polynomials[i] = new PolynomialFunction(coefficients);
+      double slope = (y[i + 1] - y[i]) / (x[i + 1] - x[i]);
+      polynomials[i] = new PolynomialFunction(new double[] {y[i], slope});
     }
 
     return new PolynomialSplineFunction(x, polynomials);
